--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Biologa Nutrizionista Mara De Rose</title>
+  <title>Mara De Rose Biologa Nutrizionista</title>
   <style>
     :root{
       --petrolio: #0b6b6b;
