--- a/index.html
+++ b/index.html
@@ -257,15 +257,15 @@
   <div class="grid">
     <div class="card">
       <h3>Prima visita</h3>
-      <p>Valutazione completa dello stato nutrizionale e impostazione del piano personalizzato.</p>
+      <p>La prima visita dal nutrizionista è un incontro conoscitivo per raccogliere storia clinica, abitudini alimentari e stile di vita, seguito da misurazioni antropometriche (peso, altezza, circonferenze) per creare un piano alimentare su misura, personalizzato in base ai tuoi obiettivi (dimagrimento, salute, ecc.) e alle tue esigenze. È utile portare esami del sangue recenti (glicemia, lipidi, tiroide) e compilare un eventuale diario alimentare richiesto, presentandoti in abiti comodi per le misurazioni. </p>
     </div>
     <div class="card">
       <h3>Visite di controllo</h3>
-      <p>Monitoraggio dei progressi e aggiornamento del piano alimentare.</p>
+      <p>La visita di controllo dal nutrizionista, della durata media di 30 minuti circa, è fondamentale per monitorare i progressi, valutare l'efficacia del piano alimentare (ogni 30-60 giorni) e apportare modifiche basate su composizione corporea (peso, plicometria, bioimpedenziometria) e obiettivi. Si analizzano le difficoltà riscontrate, la fame e l'andamento del peso per ottimizzare i risultati. </p>
     </div>
     <div class="card">
       <h3>Consulenza online</h3>
-      <p>Supporto a distanza via videochiamata, per chi è fuori città o preferisce la comodità di casa.</p>
+      <p>La consulenza online con un nutrizionista permette di ricevere piani alimentari personalizzati e monitorare i progressi tramite videochiamata, utilizzando piattaforme dedicate. Il servizio include anamnesi, definizione degli obiettivi e invio della dieta via e-mail. </p>
     </div>
   </div>
 </section>
@@ -280,7 +280,7 @@
 </section>
 
 <footer>
-  © 2026 Biologa Nutrizionista Mara De Rose
+  © 2026 Biologa Nutrizionista Mara De Roseeeeee
 </footer>
 
 </body>
