--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
 </section>
 
 <footer>
-  © 2026 Biologa Nutrizionista Mara De Roseeeeee
+  © 2026 Biologa Nutrizionista Mara De Rose
 </footer>
 
 </body>
