--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
 
   <div class="hero-content">
     <h2>Benvenuti nel mio studio</h2>
-    <p>Mi chiamo Mara De Rose, biologa nutrizionista. Ti aiuto a raggiungere il tuo benessere con un percorso personalizzato, sia in studio che online.</p>
+    <p>Sono Mara De Rose, abilitata alla professione di Biologa nutrizionista. Vorrei aiutarti a raggiungere i tuoi ideali di bellezza e benessere personale. Lo faremo insieme con un percorso personalizzato, anche online.</p>
 
     <div style="display: flex; flex-direction: column; gap: 15px; max-width: 300px; margin:auto;">
       <a class="btn" href="https://calendly.com/maraderose-biologanutrizionista/30min" target="_blank">
