--- a/index.html
+++ b/index.html
@@ -277,6 +277,7 @@
   <p>Email: <strong>maraderose.biologanutrizionista@gmail.com</strong></p>
   <p>Telefono: <strong>+39 351 851 4500</strong></p>
   <p>Studio: <strong>Via Peppino Impastato, Montalto Uffugo (CS)</strong></p>
+  <p><strong>Iscritta all'Ordine Regionale dei Biologi della Calabria, Sez. A, nr. Cal_A3036</strong></p>
 </section>
 
 <footer>
